# opticover

./: README.md  opticover.cabal
src/: Opticover.hs
src/Opticover/: Geometry.hs  Import.hs  Ingress.hs  Ple.hs  Query.hs  Types.hs
src/Opticover/Geometry/: Calc.hs  Types.hs
src/Opticover/Geometry/Calc/: Box.hs  Line.hs  Triangle.hs  Vec.hs
src/Opticover/Ingress/: Calc.hs  Game.hs  Optimize.hs  Query.hs  Types.hs
src/Opticover/Ingress/Game/: Calc.hs  Query.hs  Types.hs  Unsafe.hs
test/: GeometryTest.hs  QueryTest.hs
