name:                opticover
version:             0.1.0.0
synopsis:            Optimal fielding
-- description:
homepage:            https://github.com/githubuser/opticover#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Non
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Opticover
                     , Opticover.Geometry
                     , Opticover.Geometry.Calc
                     , Opticover.Geometry.Types
                     , Opticover.Ingress
                     , Opticover.Ingress.Calc
                     , Opticover.Ingress.Query
                     , Opticover.Ingress.Types
                     , Opticover.Ple
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , hmatrix
                     , ieee754
                     , lens
                     , text
  default-extensions:  DataKinds
                     , FlexibleInstances
                     , KindSignatures
                     , LambdaCase
                     , MultiWayIf
                     , OverloadedStrings
                     , TemplateHaskell
  default-language:    Haskell2010

executable opticover-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , opticover
  default-language:    Haskell2010

test-suite opticover-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , opticover
                     , tasty
                     , tasty-auto
                     , tasty-hunit
  other-modules:       GeometryTest
                     , QueryTest
  default-extensions:  DataKinds
                     , FlexibleInstances
                     , KindSignatures
                     , LambdaCase
                     , OverloadedStrings
                     , TemplateHaskell
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/opticover
